#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(btstack, 0.1.0, matthias.ringwald@gmail.com)

AC_ARG_WITH(vendor-id, [AS_HELP_STRING([--with-vendor-id=vendorID], [Specify USB BT Dongle vendorID])], USB_VENDOR_ID=$withval, USB_VENDOR_ID="")  
AC_ARG_WITH(product-id, [AS_HELP_STRING([--with-product-id=productID], [Specify USB BT Dongle productID])], USB_PRODUCT_ID=$withval, USB_PRODUCT_ID="")  
AC_ARG_WITH(uart-device, [AS_HELP_STRING([--with-uart-device=uartDevice], [Specify BT UART device to use])], UART_DEVICE=$withval, UART_DEVICE="/dev/ttyS0")  
AC_ARG_WITH(uart-speed, [AS_HELP_STRING([--with-uart-speed=uartSpeed], [Specify BT UART speed to use])], UART_SPEED=$withval, UART_SPEED="115200")  
AC_ARG_WITH(hci-transport, [AS_HELP_STRING([--with-hci-transport=transportType], [Specify BT type to use: h4, usb])], HCI_TRANSPORT=$withval, HCI_TRANSPORT="h4")  

# BUILD/HOST/TARGET
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
PKG_PROG_PKG_CONFIG


# libdvdread used to get info on audio and subtitle languages
PKG_CHECK_MODULES([LIBUSB], [libusb-1.0], HAVE_LIBUSB="yes", HAVE_LIBUSB="no")

# AC_CONFIG_FILES([Makefile])

# check USB specs
if test "x$HCI_TRANSPORT" = xusb; then
    if test -z "$USB_VENDOR_ID" ; then 
        AC_MSG_ERROR(USB Transport requested but USB_VENDOR_ID not set. Please specify vendor ID of your USB dongle using --with-vendor-id=0x1234)
    fi
    if test -z "$USB_PRODUCT_ID" ; then 
        AC_MSG_ERROR(USB Transport requested but USB_PRODUCT_ID not set. Please specify product ID of your USB dongle using --with-product-id=0x1234)
    fi
    if test "$HAVE_LIBUSB" == "no" ; then 
        AC_MSG_ERROR(USB Transport requested but libusb-1.0 not found using pkg-config. Please set PKG_CONFIG_PATH correctly and/or install libusb-1.0 from your distribution or from http://libusb.sourceforge.net/api-1.0/)
    fi
fi

# summary
echo
echo "BTstack configuration for $HCI_TRANSPORT"
if test "x$HCI_TRANSPORT" = xusb; then
    echo "USB_PRODUCT_ID=$USB_PRODUCT_ID"
    echo "USB_VENDOR_ID=$USB_VENDOR_ID"
    echo "LIBUSB_FLAGS=$LIBUSB_FLAGS"
    echo "LIBUSB_LIBS=$LIBUSB_LIBS"
else
    echo "UART_DEVICE=$UART_DEVICE"
    echo "UART_SPEED=$UART_SPEED"
fi
echo

# create config.h
echo "// config.h created by configure for BTstack " `date`> config.h
if test "x$HCI_TRANSPORT" = xusb; then
    echo "#define HAVE_TRANSPORT_USB" >> config.h
    echo "#define USB_PRODUCT_ID=$USB_PRODUCT_ID" >> config.h
    echo "#define USB_VENDOR_ID=$USB_VENDOR_ID" >> config.h
else
    echo "#define HAVE_TRANSPORT_H4" >> config.h
    echo "#define UART_DEVICE=$UART_DEVICE" >> config.h
    echo "#define UART_SPEED=$UART_SPEED" >> config.h
fi


AC_SUBST(LIBTOOL)
AC_SUBST(INSTALL_PROGRAM)
AC_SUBST(HAVE_LIBUSB)
AC_OUTPUT
