bin_PROGRAMS =  test
test_SOURCES =  test.c                     \
                ../src/btstack.c           \
                ../src/l2cap_signaling.c   \
                ../src/hci_cmds.c          \
                ../src/hci_dump.c          \
                ../src/linked_list.c       \
                ../src/run_loop.c          \
                ../src/socket_connection.c \
                ../src/utils.c
